--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=2.1.99");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.1.99") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.1.99") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.1.99") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.1.99") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.1.99#materialdesigniconsregular") format("svg");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=2.2.43");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.2.43") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.2.43") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.2.43") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.2.43") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.2.43#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -63,6 +63,10 @@
 
 .mdi-account-group:before {
   content: "\F848";
+}
+
+.mdi-account-heart:before {
+  content: "\F898";
 }
 
 .mdi-account-key:before {
@@ -249,6 +253,10 @@
   content: "\F02A";
 }
 
+.mdi-alien:before {
+  content: "\F899";
+}
+
 .mdi-all-inclusive:before {
   content: "\F6BD";
 }
@@ -315,6 +323,10 @@
 
 .mdi-animation:before {
   content: "\F5D8";
+}
+
+.mdi-anvil:before {
+  content: "\F89A";
 }
 
 .mdi-apple:before {
@@ -829,6 +841,10 @@
   content: "\F084";
 }
 
+.mdi-battery-charging-10:before {
+  content: "\F89B";
+}
+
 .mdi-battery-charging-100:before {
   content: "\F085";
 }
@@ -845,8 +861,16 @@
   content: "\F088";
 }
 
+.mdi-battery-charging-50:before {
+  content: "\F89C";
+}
+
 .mdi-battery-charging-60:before {
   content: "\F089";
+}
+
+.mdi-battery-charging-70:before {
+  content: "\F89D";
 }
 
 .mdi-battery-charging-80:before {
@@ -855,6 +879,10 @@
 
 .mdi-battery-charging-90:before {
   content: "\F08B";
+}
+
+.mdi-battery-charging-outline:before {
+  content: "\F89E";
 }
 
 .mdi-battery-charging-wireless:before {
@@ -939,6 +967,10 @@
 
 .mdi-beats:before {
   content: "\F097";
+}
+
+.mdi-bed-empty:before {
+  content: "\F89F";
 }
 
 .mdi-beer:before {
@@ -1173,8 +1205,16 @@
   content: "\F0C7";
 }
 
+.mdi-border-all-variant:before {
+  content: "\F8A0";
+}
+
 .mdi-border-bottom:before {
   content: "\F0C8";
+}
+
+.mdi-border-bottom-variant:before {
+  content: "\F8A1";
 }
 
 .mdi-border-color:before {
@@ -1193,8 +1233,16 @@
   content: "\F0CC";
 }
 
+.mdi-border-left-variant:before {
+  content: "\F8A2";
+}
+
 .mdi-border-none:before {
   content: "\F0CD";
+}
+
+.mdi-border-none-variant:before {
+  content: "\F8A3";
 }
 
 .mdi-border-outside:before {
@@ -1205,12 +1253,20 @@
   content: "\F0CF";
 }
 
+.mdi-border-right-variant:before {
+  content: "\F8A4";
+}
+
 .mdi-border-style:before {
   content: "\F0D0";
 }
 
 .mdi-border-top:before {
   content: "\F0D1";
+}
+
+.mdi-border-top-variant:before {
+  content: "\F8A5";
 }
 
 .mdi-border-vertical:before {
@@ -1387,6 +1443,10 @@
 
 .mdi-calendar-clock:before {
   content: "\F0F0";
+}
+
+.mdi-calendar-edit:before {
+  content: "\F8A6";
 }
 
 .mdi-calendar-multiple:before {
@@ -1985,6 +2045,10 @@
   content: "\F14C";
 }
 
+.mdi-clipboard-check-outline:before {
+  content: "\F8A7";
+}
+
 .mdi-clipboard-flow:before {
   content: "\F6C7";
 }
@@ -2323,6 +2387,10 @@
 
 .mdi-console-line:before {
   content: "\F7B6";
+}
+
+.mdi-console-network:before {
+  content: "\F8A8";
 }
 
 .mdi-contact-mail:before {
@@ -3217,6 +3285,10 @@
   content: "\F217";
 }
 
+.mdi-file-compare:before {
+  content: "\F8A9";
+}
+
 .mdi-file-delimited:before {
   content: "\F218";
 }
@@ -3381,6 +3453,10 @@
   content: "\F238";
 }
 
+.mdi-fire-truck:before {
+  content: "\F8AA";
+}
+
 .mdi-firefox:before {
   content: "\F239";
 }
@@ -3503,6 +3579,14 @@
 
 .mdi-folder-image:before {
   content: "\F24F";
+}
+
+.mdi-folder-key:before {
+  content: "\F8AB";
+}
+
+.mdi-folder-key-network:before {
+  content: "\F8AC";
 }
 
 .mdi-folder-lock:before {
@@ -4193,6 +4277,10 @@
   content: "\F2C0";
 }
 
+.mdi-gpu:before {
+  content: "\F8AD";
+}
+
 .mdi-gradient:before {
   content: "\F69F";
 }
@@ -4417,6 +4505,10 @@
   content: "\F7D1";
 }
 
+.mdi-home-currency-usd:before {
+  content: "\F8AE";
+}
+
 .mdi-home-heart:before {
   content: "\F826";
 }
@@ -4615,6 +4707,10 @@
 
 .mdi-inbox-arrow-up:before {
   content: "\F3D1";
+}
+
+.mdi-inbox-multiple:before {
+  content: "\F8AF";
 }
 
 .mdi-incognito:before {
@@ -4817,6 +4913,10 @@
   content: "\F31E";
 }
 
+.mdi-language-lua:before {
+  content: "\F8B0";
+}
+
 .mdi-language-php:before {
   content: "\F31F";
 }
@@ -5015,6 +5115,10 @@
 
 .mdi-lock-reset:before {
   content: "\F772";
+}
+
+.mdi-lock-smart:before {
+  content: "\F8B1";
 }
 
 .mdi-locker:before {
@@ -5285,12 +5389,20 @@
   content: "\F36C";
 }
 
+.mdi-microphone-minus:before {
+  content: "\F8B2";
+}
+
 .mdi-microphone-off:before {
   content: "\F36D";
 }
 
 .mdi-microphone-outline:before {
   content: "\F36E";
+}
+
+.mdi-microphone-plus:before {
+  content: "\F8B3";
 }
 
 .mdi-microphone-settings:before {
@@ -5881,6 +5993,10 @@
   content: "\F3D9";
 }
 
+.mdi-palette-swatch:before {
+  content: "\F8B4";
+}
+
 .mdi-panda:before {
   content: "\F3DA";
 }
@@ -6009,6 +6125,10 @@
   content: "\F3F0";
 }
 
+.mdi-periodic-table:before {
+  content: "\F8B5";
+}
+
 .mdi-periodic-table-co2:before {
   content: "\F7E3";
 }
@@ -6107,6 +6227,10 @@
 
 .mdi-piano:before {
   content: "\F67C";
+}
+
+.mdi-pickaxe:before {
+  content: "\F8B6";
 }
 
 .mdi-pier:before {
@@ -6425,6 +6549,10 @@
   content: "\F432";
 }
 
+.mdi-qrcode-edit:before {
+  content: "\F8B7";
+}
+
 .mdi-qrcode-scan:before {
   content: "\F433";
 }
@@ -6559,6 +6687,10 @@
 
 .mdi-remote:before {
   content: "\F454";
+}
+
+.mdi-remote-desktop:before {
+  content: "\F8B8";
 }
 
 .mdi-rename-box:before {
@@ -6743,6 +6875,10 @@
 
 .mdi-satellite-variant:before {
   content: "\F471";
+}
+
+.mdi-sausage:before {
+  content: "\F8B9";
 }
 
 .mdi-saxophone:before {
@@ -6953,6 +7089,10 @@
   content: "\F494";
 }
 
+.mdi-settings-outline:before {
+  content: "\F8BA";
+}
+
 .mdi-shape:before {
   content: "\F830";
 }
@@ -7071,6 +7211,22 @@
 
 .mdi-signal-4g:before {
   content: "\F713";
+}
+
+.mdi-signal-cellular-1:before {
+  content: "\F8BB";
+}
+
+.mdi-signal-cellular-2:before {
+  content: "\F8BC";
+}
+
+.mdi-signal-cellular-3:before {
+  content: "\F8BD";
+}
+
+.mdi-signal-cellular-outline:before {
+  content: "\F8BE";
 }
 
 .mdi-signal-hspa:before {
@@ -7345,6 +7501,10 @@
   content: "\F783";
 }
 
+.mdi-ssh:before {
+  content: "\F8BF";
+}
+
 .mdi-stack-overflow:before {
   content: "\F4CC";
 }
@@ -7501,8 +7661,16 @@
   content: "\F4E1";
 }
 
+.mdi-swap-horizontal-variant:before {
+  content: "\F8C0";
+}
+
 .mdi-swap-vertical:before {
   content: "\F4E2";
+}
+
+.mdi-swap-vertical-variant:before {
+  content: "\F8C1";
 }
 
 .mdi-swim:before {
@@ -7890,6 +8058,10 @@
 }
 
 .mdi-tooth:before {
+  content: "\F8C2";
+}
+
+.mdi-tooth-outline:before {
   content: "\F529";
 }
 
@@ -7923,6 +8095,10 @@
 
 .mdi-train:before {
   content: "\F52C";
+}
+
+.mdi-train-variant:before {
+  content: "\F8C3";
 }
 
 .mdi-tram:before {
