--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "2.1.99" !default;
+$mdi-version:          "2.2.43" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -20,6 +20,7 @@ $mdi-icons: (
     "account-convert": F00A,
     "account-edit": F6BB,
     "account-group": F848,
+    "account-heart": F898,
     "account-key": F00B,
     "account-location": F00C,
     "account-minus": F00D,
@@ -66,6 +67,7 @@ $mdi-icons: (
     "alert-octagon": F029,
     "alert-octagram": F766,
     "alert-outline": F02A,
+    "alien": F899,
     "all-inclusive": F6BD,
     "allo": F801,
     "alpha": F02B,
@@ -83,6 +85,7 @@ $mdi-icons: (
     "angular": F6B1,
     "angularjs": F6BE,
     "animation": F5D8,
+    "anvil": F89A,
     "apple": F035,
     "apple-finder": F036,
     "apple-ios": F037,
@@ -211,13 +214,17 @@ $mdi-icons: (
     "battery-90": F082,
     "battery-alert": F083,
     "battery-charging": F084,
+    "battery-charging-10": F89B,
     "battery-charging-100": F085,
     "battery-charging-20": F086,
     "battery-charging-30": F087,
     "battery-charging-40": F088,
+    "battery-charging-50": F89C,
     "battery-charging-60": F089,
+    "battery-charging-70": F89D,
     "battery-charging-80": F08A,
     "battery-charging-90": F08B,
+    "battery-charging-outline": F89E,
     "battery-charging-wireless": F806,
     "battery-charging-wireless-10": F807,
     "battery-charging-wireless-20": F808,
@@ -239,6 +246,7 @@ $mdi-icons: (
     "beach": F092,
     "beaker": F68F,
     "beats": F097,
+    "bed-empty": F89F,
     "beer": F098,
     "behance": F099,
     "bell": F09A,
@@ -297,16 +305,22 @@ $mdi-icons: (
     "boombox": F5DC,
     "bootstrap": F6C5,
     "border-all": F0C7,
+    "border-all-variant": F8A0,
     "border-bottom": F0C8,
+    "border-bottom-variant": F8A1,
     "border-color": F0C9,
     "border-horizontal": F0CA,
     "border-inside": F0CB,
     "border-left": F0CC,
+    "border-left-variant": F8A2,
     "border-none": F0CD,
+    "border-none-variant": F8A3,
     "border-outside": F0CE,
     "border-right": F0CF,
+    "border-right-variant": F8A4,
     "border-style": F0D0,
     "border-top": F0D1,
+    "border-top-variant": F8A5,
     "border-vertical": F0D2,
     "bottle-wine": F853,
     "bow-tie": F677,
@@ -351,6 +365,7 @@ $mdi-icons: (
     "calendar-blank": F0EE,
     "calendar-check": F0EF,
     "calendar-clock": F0F0,
+    "calendar-edit": F8A6,
     "calendar-multiple": F0F1,
     "calendar-multiple-check": F0F2,
     "calendar-plus": F0F3,
@@ -500,6 +515,7 @@ $mdi-icons: (
     "clipboard-arrow-down": F14A,
     "clipboard-arrow-left": F14B,
     "clipboard-check": F14C,
+    "clipboard-check-outline": F8A7,
     "clipboard-flow": F6C7,
     "clipboard-outline": F14D,
     "clipboard-plus": F750,
@@ -585,6 +601,7 @@ $mdi-icons: (
     "compass-outline": F18C,
     "console": F18D,
     "console-line": F7B6,
+    "console-network": F8A8,
     "contact-mail": F18E,
     "contacts": F6CA,
     "content-copy": F18F,
@@ -808,6 +825,7 @@ $mdi-icons: (
     "file-chart": F215,
     "file-check": F216,
     "file-cloud": F217,
+    "file-compare": F8A9,
     "file-delimited": F218,
     "file-document": F219,
     "file-document-box": F21A,
@@ -849,6 +867,7 @@ $mdi-icons: (
     "find-replace": F6D3,
     "fingerprint": F237,
     "fire": F238,
+    "fire-truck": F8AA,
     "firefox": F239,
     "fish": F23A,
     "flag": F23B,
@@ -880,6 +899,8 @@ $mdi-icons: (
     "folder-download": F24D,
     "folder-google-drive": F24E,
     "folder-image": F24F,
+    "folder-key": F8AB,
+    "folder-key-network": F8AC,
     "folder-lock": F250,
     "folder-lock-open": F251,
     "folder-move": F252,
@@ -1052,6 +1073,7 @@ $mdi-icons: (
     "google-plus-box": F2BE,
     "google-translate": F2BF,
     "google-wallet": F2C0,
+    "gpu": F8AD,
     "gradient": F69F,
     "graphql": F876,
     "grease-pencil": F648,
@@ -1108,6 +1130,7 @@ $mdi-icons: (
     "home-assistant": F7CF,
     "home-automation": F7D0,
     "home-circle": F7D1,
+    "home-currency-usd": F8AE,
     "home-heart": F826,
     "home-map-marker": F5F8,
     "home-modern": F2DD,
@@ -1158,6 +1181,7 @@ $mdi-icons: (
     "inbox": F686,
     "inbox-arrow-down": F2FB,
     "inbox-arrow-up": F3D1,
+    "inbox-multiple": F8AF,
     "incognito": F5F9,
     "infinity": F6E3,
     "information": F2FC,
@@ -1208,6 +1232,7 @@ $mdi-icons: (
     "language-go": F7D2,
     "language-html5": F31D,
     "language-javascript": F31E,
+    "language-lua": F8B0,
     "language-php": F31F,
     "language-python": F320,
     "language-python-text": F321,
@@ -1258,6 +1283,7 @@ $mdi-icons: (
     "lock-pattern": F6E9,
     "lock-plus": F5FB,
     "lock-reset": F772,
+    "lock-smart": F8B1,
     "locker": F7D6,
     "locker-multiple": F7D7,
     "login": F342,
@@ -1325,8 +1351,10 @@ $mdi-icons: (
     "metronome-tick": F7DA,
     "micro-sd": F7DB,
     "microphone": F36C,
+    "microphone-minus": F8B2,
     "microphone-off": F36D,
     "microphone-outline": F36E,
+    "microphone-plus": F8B3,
     "microphone-settings": F36F,
     "microphone-variant": F370,
     "microphone-variant-off": F371,
@@ -1474,6 +1502,7 @@ $mdi-icons: (
     "page-layout-sidebar-right": F6FD,
     "palette": F3D8,
     "palette-advanced": F3D9,
+    "palette-swatch": F8B4,
     "panda": F3DA,
     "pandora": F3DB,
     "panorama": F3DC,
@@ -1506,6 +1535,7 @@ $mdi-icons: (
     "pentagon": F6FF,
     "pentagon-outline": F700,
     "percent": F3F0,
+    "periodic-table": F8B5,
     "periodic-table-co2": F7E3,
     "periscope": F747,
     "pharmacy": F3F1,
@@ -1531,6 +1561,7 @@ $mdi-icons: (
     "pi": F3FF,
     "pi-box": F400,
     "piano": F67C,
+    "pickaxe": F8B6,
     "pier": F886,
     "pier-crane": F887,
     "pig": F401,
@@ -1610,6 +1641,7 @@ $mdi-icons: (
     "puzzle": F431,
     "qqchat": F605,
     "qrcode": F432,
+    "qrcode-edit": F8B7,
     "qrcode-scan": F433,
     "quadcopter": F434,
     "quality-high": F435,
@@ -1644,6 +1676,7 @@ $mdi-icons: (
     "reload": F453,
     "reminder": F88B,
     "remote": F454,
+    "remote-desktop": F8B8,
     "rename-box": F455,
     "reorder-horizontal": F687,
     "reorder-vertical": F688,
@@ -1690,6 +1723,7 @@ $mdi-icons: (
     "sass": F7EB,
     "satellite": F470,
     "satellite-variant": F471,
+    "sausage": F8B9,
     "saxophone": F609,
     "scale": F472,
     "scale-balance": F5D1,
@@ -1742,6 +1776,7 @@ $mdi-icons: (
     "set-right": F77E,
     "settings": F493,
     "settings-box": F494,
+    "settings-outline": F8BA,
     "shape": F830,
     "shape-circle-plus": F65D,
     "shape-outline": F831,
@@ -1772,6 +1807,10 @@ $mdi-icons: (
     "signal-2g": F711,
     "signal-3g": F712,
     "signal-4g": F713,
+    "signal-cellular-1": F8BB,
+    "signal-cellular-2": F8BC,
+    "signal-cellular-3": F8BD,
+    "signal-cellular-outline": F8BE,
     "signal-hspa": F714,
     "signal-hspa-plus": F715,
     "signal-off": F782,
@@ -1840,6 +1879,7 @@ $mdi-icons: (
     "square-inc-cash": F4CB,
     "square-outline": F762,
     "square-root": F783,
+    "ssh": F8BF,
     "stack-overflow": F4CC,
     "stackexchange": F60B,
     "stadium": F71F,
@@ -1879,7 +1919,9 @@ $mdi-icons: (
     "surround-sound-7-1": F7F2,
     "svg": F720,
     "swap-horizontal": F4E1,
+    "swap-horizontal-variant": F8C0,
     "swap-vertical": F4E2,
+    "swap-vertical-variant": F8C1,
     "swim": F4E3,
     "switch": F4E4,
     "sword": F4E5,
@@ -1976,7 +2018,8 @@ $mdi-icons: (
     "tooltip-outline": F526,
     "tooltip-outline-plus": F527,
     "tooltip-text": F528,
-    "tooth": F529,
+    "tooth": F8C2,
+    "tooth-outline": F529,
     "tor": F52A,
     "tower-beach": F680,
     "tower-fire": F681,
@@ -1985,6 +2028,7 @@ $mdi-icons: (
     "tractor": F891,
     "traffic-light": F52B,
     "train": F52C,
+    "train-variant": F8C3,
     "tram": F52D,
     "transcribe": F52E,
     "transcribe-close": F52F,
